add direct uploads for topology and trajectory registries
